# finance_project

./: .dockerignore  .gitignore  Dockerfile  Fastapi_Server.py  LICENSE  README.md  Server.py  Telegram_Server.py  airflow_daily_scraping.py  basic_infromation.py  main.py  pyproject.toml  requirements.txt  script.sh  statement.py  stock_price.py  test.py
api/: SQL_connect.py  __init__.py  image_font.py  main.py  response_model.py  stock_image.py  webapi.py
cases/: financial_status.py
database_init/: .gitignore  __init__.py  create_daily_stock_list.py  mariadb_config.py  query_generate.py  table_schema.json
database_package/: finance_script.sql  mysql_action.py  table_schema.xlsx  ~$table_schema.xlsx
log/: log.py
scraping_package/: __init__.py  basic_information.py  finance_statement_scraping.py  options_scraping.py  stock_list.py  stock_scraping.py
scraping_package/proxy_for_free/: proxy_search.py
src/: README.md  __init__.py  app.py  free_proxy.py  get_stock_list.py  get_stock_price.py  scraping_stock_price.py  setting.py
src/Bullshit/: data.json  helath_soul.py
src/Controller/: BullshitController.py  ImageController.py  ScarpingController.py  __init__.py
src/Database/: __init__.py  maria_driver.py  table_schema.json
src/Scraping/: __init__.py  stock_list.py  stock_price.py
src/StockImage/: draw_picture.py
src/TelegramBot/: Initial.py  __init__.py  response_image.py
src/TelegramBot/command_handler/: __init__.py  (+5 more)
src/quant_analysis/: 03_Rolling_window.ipynb  04_daily_returns.ipynb  05_IRR.ipynb  06_Merge.ipynb  07_Risk.ipynb  08_Risk_adjusted_return.ipynb  09_Log_Return.ipynb  10_resample.ipynb  11_Trend_Line.ipynb  12_Bias.ipynb  13_Systematic_Investment_Plan(SIP).ipynb  14_SIP_TakeProfit.ipynb  15_SIP_BargainHunting.ipynb  16_Max_drawdown.ipynb  17_Pyramid_Down.ipynb  module_import.py
telegram/: __init__.py  bot_init.py  telegram_stock.py
