[tool.poetry]
name = "finance-project"
version = "0.1.0"
description = "write for Lawrence"
authors = ["Marcus Lin <s09203647@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.1"
bs4 = "^0.0.2"
lxml = "^5.1.0"
yfinance = "^0.2.37"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
