[tool.poetry]
name = "finance-project"
version = "0.1.0"
description = "write for Lawrence"
authors = ["Marcus Lin <s09203647@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.1"
bs4 = "^0.0.2"
lxml = "^5.1.0"
yfinance = "^0.2.37"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.28"
openpyxl = "^3.1.2"
tqdm = "^4.66.2"
finmind = "^1.6.6"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
