[tool.poetry]
name = "finance-project"
version = "0.1.0"
description = "Scraping finance Data"
authors = ["Marcus <s09203647@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
requests = "2.31.0"
pandas = "2.2.1"
bs4 = "0.0.2"
lxml = "5.1.0"
pymysql = "1.1.0"
sqlalchemy = "2.0.28"
openpyxl = "3.1.2"
html5lib = "1.1"
ipykernel = "6.29.5"
tqdm = "4.66.4"
fake-useragent = "1.5.1"
matplotlib = "3.9.0"
yfinance = "0.2.37"
mplfinance = "0.12.10b0"
fastapi = "0.112.2"
uvicorn = "0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
